--- a/themes/hugo-fresh/layouts/partials/hero-body.html
+++ b/themes/hugo-fresh/layouts/partials/hero-body.html
@@ -23,8 +23,10 @@
         </p>
       </div>
       <div class="column is-5 is-offset-1">
-        <figure class="image is-4by3">
-          <img src="{{ printf "/images/%s" $image | relURL }}" alt="Description">
+        <figure class="image">
+<iframe src="https://player.vimeo.com/video/299263596" width="320" height="180" frameborder="0" allow="autoplay; fullscreen" allowfullscreen=""></iframe>
+          <!--<img src="{{ printf "/images/%s" $image | relURL }}"
+            alt="Description">-->
         </figure>
       </div>
     </div>
